LU-5128 obdclass: fix a race in recovery

in "class_export_recovery_cleanup", the check of the flag
"exp->exp_req_replay_needed" should be protected by "exp_lock".

Change-Id: I9a1b0583cb15df896e4a608ee0e396bb90486888
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>